feat: 웹에서 스크롤 안보이도록 추가

--- a/Netflix/styles/video.css
+++ b/Netflix/styles/video.css
@@ -21,6 +21,10 @@
     scrollbar-width: none;
 }
 
+.video-grid::-webkit-scrollbar {
+    display: none;
+}
+
 .video-section__title {
     margin-top: 20px;
     margin-left: 4px;
