feat: 공통 색상 적용

--- a/Netflix/styles/general.css
+++ b/Netflix/styles/general.css
@@ -5,5 +5,10 @@
 }
 
 body {
-    background-color: black;
+    background-color: var(--color-black);
+}
+
+:root {
+    --color-black: #000000;
+    --color-white: #FFFFFF;
 }
