--- a/Netflix/styles/banner.css
+++ b/Netflix/styles/banner.css
@@ -19,7 +19,7 @@
 .video-title {
     font-size: 3rem;
     font-weight: 600;
-    color: white;
+    color: var(--color-white);
 }
 
 .video-buttons {
@@ -33,7 +33,7 @@
     border-radius: 4px;
     font-size: 0.9rem;
     font-weight: 500;
-    color: white;
+    color: var(--color-white);
     text-decoration: none;
     cursor: pointer;
     padding: 8px 20px;
@@ -42,7 +42,7 @@
 .video-description {
     font-size: 1rem;
     font-weight: 400;
-    color: white;
+    color: var(--color-white);
     width: 400px;
     max-height: 60px;
     text-overflow: ellipsis;
