--- a/Netflix/styles/video.css
+++ b/Netflix/styles/video.css
@@ -1,10 +1,10 @@
 .video-section {
     position: relative;
-    background-color: black;
+    background-color: var(--color-black);
     margin-top: -40px;
     padding-bottom: 40px;
     z-index: 2;
-    box-shadow: 0 -50px 60px black;
+    box-shadow: 0 -50px 60px var(--color-black);
 }
 
 .video-grid {
@@ -15,7 +15,7 @@
     gap: 30px;
     margin: 8px 16px;
     overflow-x: auto;
-    
+
     /* 추후 스크롤.. */
     scroll-behavior: smooth;
     scrollbar-width: none;
@@ -30,7 +30,7 @@
     margin-left: 4px;
     font-size: 1rem;
     font-weight: 600;
-    color: white;
+    color: var(--color-white);
 }
 
 .video-grid__item {
