--- a/Netflix/styles/header.css
+++ b/Netflix/styles/header.css
@@ -15,6 +15,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    overflow: hidden;
 }
 
 .netflix-logo {
@@ -25,4 +26,5 @@
 .user-avatar {
     width: 30px;
     height: 30px;
+    overflow: hidden;
 }
