--- a/Netflix/styles/banner.css
+++ b/Netflix/styles/banner.css
@@ -42,10 +42,13 @@
 .video-description {
     margin-top: 8px;
     width: 40%;
-    max-height: 60px;
     text-overflow: ellipsis;
     font-size: 1.5vw;
     font-weight: 400;
     color: var(--color-white);
+    /* 3줄 제한을 위해 사용 | -webkit-line-clamp에 warning이 뜬다. */
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
     overflow: hidden;
 }
